# kernel-lore-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LEGAL.md  README.md  SECURITY.md  TODO.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: data-flow.md  deployment-modes.md  four-tier-index.md  over-db.md  overview.md  reciprocity.md  three-tier-index.md  trade-offs.md
docs/demos/: first-session.md
docs/indexing/: bm25-tier.md  compressed-store.md  metadata-tier.md  path-tier.md  tokenizer-spec.md  trigram-tier.md
docs/ingestion/: grokmirror.md  mbox-parsing.md  patch-parsing.md  shard-walking.md
docs/mcp/: client-config.md  query-routing.md  tools.md  transport-auth.md
docs/ops/: corpus-coverage.md  cost-model.md  ec2-sizing.md  monitoring.md  production-hardening.md  public-launch-checklist.md  runbook.md  threat-model.md  update-cadence.md  update-frequency.md
docs/plans/: 2026-04-14-best-in-class-kernel-mcp.md  2026-04-15-internalize-grokmirror.md  2026-04-15-mcp-spec-coverage-and-uplift.md  2026-04-17-overdb-followups.md  2026-04-17-overdb-metadata-tier.md  2026-04-20-v0.3.0-plan.md  2026-04-22-v0.3.1-plan.md
docs/research/: 2026-04-14-agent-ergonomics.md  2026-04-14-best-in-class-mcp-survey.md  2026-04-14-external-data-sources.md  2026-04-14-gix-vs-git2.md  2026-04-14-mcp-python-sdk.md  2026-04-14-pyo3-maturin.md  2026-04-14-search-library-landscape.md  2026-04-14-storage-footprint.md  2026-04-14-tantivy.md  2026-04-14-workflow-gap-analysis.md  2026-04-15-fuzzy-search-design.md  2026-04-15-path-mentions.md  2026-04-17-overdb-validation.md  training-retriever.md
docs/standards/: README.md
docs/standards/python/: code-quality.md  data-structures.md  git.md  index.md  language.md  naming.md  pyo3-maturin.md  testing.md  uv.md
docs/standards/python/checklists/: 01-research.md  02-design.md  03-implement.md  04-test.md  05-quality.md  06-review.md  07-commit.md  08-debug.md  09-optimize.md  10-document.md  index.md
docs/standards/python/design/: boundaries.md  concurrency.md  dependencies.md  errors.md  modules.md
docs/standards/python/libraries/: fastmcp.md  httpx.md  pydantic.md  structlog.md
docs/standards/rust/: cargo.md  code-quality.md  ffi.md  index.md  language.md  naming.md  testing.md  unsafe.md
docs/standards/rust/checklists/: 01-research.md  02-design.md  03-implement.md  04-test.md  05-quality.md  06-review.md  07-commit.md  08-debug.md  09-optimize.md  10-document.md  index.md
docs/standards/rust/design/: boundaries.md  concurrency.md  data-structures.md  errors.md  modules.md
docs/standards/rust/libraries/: arrow-parquet.md  gix.md  pyo3.md  regex-automata.md  roaring-fst.md  tantivy.md  zstd.md
scripts/: agentic_smoke.sh  grokmirror-personal.conf  grokmirror.conf  klmcp-doctor.sh  klmcp-grok-pull.sh  klmcp-ingest.sh  post-pull-hook.sh  rust_call_graph.py
scripts/bench/: bench_concurrent_mixed.py  bench_hosted_adversarial.py  stress_mcp_multiprocess.py
scripts/systemd/: etc-kernel-lore-mcp-env.sample  klmcp-grokmirror.service  klmcp-grokmirror.timer  klmcp-ingest.path  klmcp-ingest.service  klmcp-mcp.service  klmcp-sync.service  klmcp-sync.timer
src/: bm25.rs  embedding.rs  error.rs  git_sidecar.rs  ingest.rs  lib.rs  maintainers.rs  metadata.rs  over.rs  parse.rs  path_tier.rs  python.rs  reader.rs  router.rs  schema.rs  state.rs  store.rs  sync.rs  tid.rs  timeout.rs  trailer_refs.rs  trigram.rs
src/kernel_lore_mcp/: __init__.py  __main__.py  _core.pyi  _surface_manifest.py  config.py  cost_class.py  cursor.py  embedding.py  errors.py  freshness.py  health.py  kwic.py  logging_.py  mapping.py  models.py  observability.py  prompts.py  reader_cache.py  sampling.py  server.py  time_bounds.py  timeout.py
src/kernel_lore_mcp/cli/: doctor.py  embed.py  ingest.py  reindex.py  sync.py
src/kernel_lore_mcp/resources/: __init__.py  blind_spots.py  coverage_stats.py  templates.py
src/kernel_lore_mcp/routes/: __init__.py  metrics.py  status.py
src/kernel_lore_mcp/tools/: __init__.py  activity.py  author_footprint.py  author_profile.py  corpus_stats.py  expand_citation.py  explain_patch.py  file_timeline.py  find.py  fix_status.py  header_search.py  maintainer_profile.py  message.py  nearest.py  patch.py  patch_diff.py  patch_search.py  path_mentions.py  primitives.py  sampling_tools.py  search.py  series.py  stable_backport.py  subsystem_churn.py  thread.py  thread_state.py
tests/: bin_ingest.rs
tests/python/: conftest.py  test_annotations.py  test_cost_class.py  test_cost_hints.py  test_coverage_stats.py  test_cursor.py  test_embedding_e2e.py  test_errors.py  test_fix_status.py  test_freshness.py  test_fuzzy_search.py  test_http_transport.py  test_ingest_and_reader.py  test_kwic.py  test_logging_profile.py  test_mcp_adversarial.py  test_mcp_tools_e2e.py  test_observability.py  test_path_mentions.py  test_primitives_e2e.py  test_prompts.py  test_regex_hosted.py  test_resource_templates.py  test_resources_routes.py  test_response_format.py  test_sampling_tools.py  test_smoke.py  test_status_subcommand.py  test_stdio_subprocess.py  test_surface_manifest.py  test_sync_cli.py  test_thread_patch_explain.py
tests/python/fixtures/: __init__.py
