[package]
name = "kernel_lore_mcp"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["Michael Bommarito <michael@bommaritollc.com>"]
license = "MIT"
description = "Rust core for kernel-lore-mcp: ingestion, three-tier indexing, and query routing for lore.kernel.org."
repository = "https://github.com/mjbommar/kernel-lore-mcp"
readme = "README.md"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]
# Disable doctests globally: module-level `//!` blocks are
# design-comment prose with pseudocode + indented examples, not real
# Rust. Real Rust examples live in `#[cfg(test)]` blocks.
doctest = false

[features]
# abi3-py312 is ON by default. Free-threaded 3.14t requires building
# with --no-default-features (abi3 is incompatible until PEP 803 "abi3t"
# lands and ships in pyo3).
default = ["abi3"]
abi3 = ["pyo3/abi3-py312"]

[dependencies]
# Python bindings. Python::detach / Python::attach are present in
# 0.28.3 stable (renamed from allow_threads/with_gil in PRs #5209 #5221).
pyo3 = { version = "0.28", features = ["extension-module"] }

# Git shard walking (gix, NOT git2-rs; see docs/research/2026-04-14-gix-vs-git2.md).
gix = { version = "0.81", default-features = false, features = [
    "max-performance-safe",
    "revision",
    "parallel",
    # SHA-1 is the only hash kind the kernel ecosystem uses. Without this
    # feature gix-hash's Kind enum ends up empty and `match self` fails to
    # compile.
    "sha1",
    # Enables `Remote::connect` / `fetch()` over HTTPS (smart protocol)
    # for the internalized sync path (kernel-lore-sync, v0.2.0). Pulls
    # in gix-protocol + gix-transport; binary grows ~1–2 MB.
    "blocking-http-transport-reqwest-rust-tls",
] }

# Email parsing
mail-parser = { version = "0.11", default-features = false, features = [
    "full_encoding",
    "serde",
] }

# BM25 tier. Stemmer feature intentionally omitted (see CLAUDE.md).
tantivy = { version = "0.26", default-features = false, features = ["mmap"] }

# Trigram tier primitives
roaring = "0.11"
fst = "0.4"
# Regex: DFA-only engine, safe for untrusted input (no backrefs).
regex-automata = "0.4"

# Path tier: multi-pattern match over the known kernel-path vocabulary.
# Already in the dep tree via tantivy; pinned explicitly so path_tier.rs
# can import it directly.
aho-corasick = "1"

# Fuzzy search: SIMD-accelerated Levenshtein substring search for the
# trigram confirmation step. MIT, zero transitive deps.
triple_accel = "0.4"

# Compression (compressed raw store)
zstd = "0.13"

# SQLite metadata tier (over.db). Mirrors public-inbox's over.sqlite3
# pattern. `bundled` so we don't depend on a system libsqlite3 version.
# `trace` enables cheap query-level tracing for ops debugging.
rusqlite = { version = "0.33", features = ["bundled", "trace"] }

# msgpack for the over.db `ddd` blob (display fields).
rmp-serde = "1.3"

# Approximate-nearest-neighbour index for the embedding tier.
# Pure Rust, no transitive ML deps; we feed it pre-computed f32
# vectors (Python side embeds via fastembed).
instant-distance = { version = "0.6", features = ["with-serde"] }
bincode = "1.3"

# Zero-copy mmap for on-disk vector reads. Avoids holding
# `count * dim * 4` bytes of vectors.f32 in anonymous RSS
# (~54 GB at full-corpus scale).
memmap2 = "0.9"

# Columnar metadata tier
arrow = { version = "58", default-features = false, features = ["ipc"] }
parquet = { version = "58", default-features = false, features = [
    "arrow",
    "zstd",
    "async",
] }

# Parallelism
rayon = "1.10"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytes = "1"
memchr = "2"
tracing = "0.1"
time = { version = "0.3", features = ["parsing", "macros"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Bulk blob reads from packfiles. libgit2's C packfile code is
# ~10-50x faster than gix's pure-Rust delta-chain resolution on
# large packed repos. Used only for the ingest blob-read step;
# gix handles rev-walk, fetch, and everything else.
# !Sync is fine — each rayon thread gets its own Repository.
git2 = { version = "0.20", default-features = false }

# anyhow ONLY for the reindex binary; library code uses thiserror.
anyhow = "1"

# Internalized grokmirror replacement (kernel-lore-sync, v0.2.0).
# ureq: tiny sync HTTP client for manifest.js.gz. rustls TLS keeps us
#   on the same TLS stack gix uses for its smart-http transport.
# flate2: gzip decode for the manifest blob.
ureq = { version = "3", default-features = false, features = [
    "rustls",
    "json",
] }
flate2 = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# tracing-subscriber is used by the `kernel-lore-ingest` binary for
# structured logs to stderr. Keep as a regular dep (not dev-only).
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[[bin]]
name = "reindex"
path = "src/bin/reindex.rs"

[[bin]]
name = "kernel-lore-ingest"
path = "src/bin/ingest.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = 1
panic = "abort"
strip = "symbols"

[[bin]]
name = "kernel-lore-build-over"
path = "src/bin/build_over.rs"

[[bin]]
name = "kernel-lore-build-git-sidecar"
path = "src/bin/build_git_sidecar.rs"

[[bin]]
name = "bench-blob-read"
path = "src/bin/bench_blob_read.rs"

[[bin]]
name = "bench-ingest-stages"
path = "src/bin/bench_ingest_stages.rs"

[[bin]]
name = "kernel-lore-sync"
path = "src/bin/sync.rs"

[[bin]]
name = "kernel-lore-doctor"
path = "src/bin/doctor.rs"
